package original_log;
option java_package="com.mr.protobuffer";
option java_outer_classname="OriginalShowLog";

message ImpLogMessage {
	// 日志版本号: 1.0
	optional string version = 1;
	// 日志写下时刻的时间戳
	optional uint64 timestamp = 2;
	// 日志 id,每一条收到的日志有一个唯一的 id
	optional string id = 3;
	// 曝光参数。
	// 示 例 ：aid=xx&oid=xxx&cid=xxx&custid=xxx&sid=xxx&adx_id=xxx&adx_bid=xxx&euid=xxx&yuid=xxx
	// 具体参数描述见曝光串参数说明。
	optional string data = 4;
	// user ip
	optional string user_ip = 5;
	// user agent
	optional string user_agent = 6;
	// refer url
	optional string refer_url = 7;
	// 浏览器语言
	optional string language = 8;
}